# indented_output_stream

./: CMakeLists.txt  README.md
example/: main.cpp
include/: indented_output_stream.hpp
unit_test/: main.cpp
